[gd_scene load_steps=4 format=2]

[ext_resource path="res://icon.png" type="Texture" id=1]
[ext_resource path="res://SCRIPT/NPC.gd" type="Script" id=2]

[sub_resource type="CircleShape2D" id=1]
radius = 67.1863

[node name="NPC" type="Area2D"]
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
modulate = Color( 1, 0, 0, 1 )
texture = ExtResource( 1 )

[node name="INTERACT" type="Label" parent="."]
visible = false
margin_left = -31.0
margin_top = -46.0
margin_right = 30.0
margin_bottom = -32.0
text = "INTERACT"

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Decision" type="ColorRect" parent="CanvasLayer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 515.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Options" type="Control" parent="CanvasLayer/Decision"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Y" type="Button" parent="CanvasLayer/Decision/Options"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 412.0
margin_top = -37.5
margin_right = 508.0
margin_bottom = -2.5
action_mode = 0
text = "YES"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="N" type="Button" parent="CanvasLayer/Decision/Options"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 414.0
margin_top = 2.5
margin_right = 508.0
margin_bottom = 37.5
text = "NO"

[node name="Message" type="Label" parent="CanvasLayer/Decision"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 129.0
margin_right = -106.0
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="body_entered" from="." to="." method="_on_NPC_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_NPC_body_exited"]
[connection signal="pressed" from="CanvasLayer/Decision/Options/Y" to="." method="_on_Y_pressed"]
[connection signal="pressed" from="CanvasLayer/Decision/Options/N" to="." method="_on_N_pressed"]
